<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="@color/textDark"
        android:text="@string/info_title"/>

    <TextView
        android:id="@+id/info_p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_p1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:textColor="@color/textDark"/>

    <TextView
        android:id="@+id/info_p2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_p2" />

    <TextView
        android:id="@+id/info_p3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_p3"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:textColor="@color/textDark"/>

    <TextView
        android:id="@+id/info_p4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_p4" />
</LinearLayout>